# snapper

./: .gitignore  .lychee.toml  .pre-commit-hooks.yaml  .typos.toml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cog.toml  flake.nix  pixi.toml  pyproject.toml  readme_src.org
.github/workflows/: ci.yml  ci_docs.yml  ci_prek.yml  nvim_test.yml  pypi.yml  wasm.yml
docs/locale/is/LC_MESSAGES/: changelog.po  index.po
docs/locale/is/LC_MESSAGES/contributing/: index.po
docs/locale/is/LC_MESSAGES/faq/: index.po
docs/locale/is/LC_MESSAGES/howto/: ci-enforcement.po  editor-integration.po  git-filter.po  neural-detection.po  pragmas.po  vale-integration.po
docs/locale/is/LC_MESSAGES/reference/: abbreviations.po  cli.po  config.po  formats.po
docs/locale/is/LC_MESSAGES/tutorials/: quickstart.po
docs/locale/pl/LC_MESSAGES/: changelog.po  index.po
docs/locale/pl/LC_MESSAGES/contributing/: index.po
docs/locale/pl/LC_MESSAGES/faq/: index.po
docs/locale/pl/LC_MESSAGES/howto/: ci-enforcement.po  editor-integration.po  git-filter.po  neural-detection.po  pragmas.po  vale-integration.po
docs/locale/pl/LC_MESSAGES/reference/: abbreviations.po  cli.po  config.po  formats.po
docs/locale/pl/LC_MESSAGES/tutorials/: quickstart.po
docs/orgmode/: changelog.org  index.org
docs/orgmode/contributing/: index.org
docs/orgmode/faq/: index.org
docs/orgmode/howto/: ci-enforcement.org  editor-integration.org  git-filter.org  neural-detection.org  pandoc-backend.org  pragmas.org  vale-integration.org  word-diff.org
docs/orgmode/reference/: abbreviations.org  cli.org  config.org  formats.org
docs/orgmode/tutorials/: quickstart.org
docs/source/: changelog.rst  cli-reference.md  conf.py
docs/source/_templates/partials/: extra-head.html
docs/source/contributing/: index.rst
docs/source/faq/: index.rst
docs/source/howto/: ci-enforcement.rst  git-filter.rst  vale-integration.rst
docs/source/reference/: abbreviations.rst  config.rst
docs/source/tutorials/: quickstart.rst
editors/nvim/: LICENSE  README.md  snapper.nvim-scm-1.rockspec
editors/nvim/doc/: snapper.txt
editors/nvim/ftplugin/: markdown.lua  org.lua  rst.lua  tex.lua
editors/nvim/lua/snapper/: config.lua  conform.lua  init.lua  lsp.lua
editors/nvim/plugin/: snapper.lua
editors/nvim/tests/: conform_spec.lua  lsp_spec.lua  minimal_init.lua  snapper_spec.lua
editors/obsidian/: manifest.json  package.json
editors/vim/autoload/: snapper.vim
editors/vim/doc/: snapper.txt
editors/vim/plugin/: snapper.vim
editors/vscode/: LICENSE  README.md  package.json
editors/word/: package.json
examples/: basic.txt  paper.md  paper.org  paper.tex
npm/: package.json
npm/scripts/: postinstall.js
scripts/: org_to_md.sh  run_nvim_tests.sh
site/: index.html  robots.txt
site-svelte/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
site-svelte/.svelte-kit/output/client/.vite/: manifest.json
site-svelte/.svelte-kit/output/client/_app/immutable/assets/: 2.CgXgUh42.css
site-svelte/.svelte-kit/output/client/_app/immutable/chunks/: BsWquQR9.js  jEPLLRAN.js
site-svelte/.svelte-kit/output/client/_app/immutable/entry/: start.DSKOgrTV.js
site-svelte/.svelte-kit/output/client/_app/immutable/nodes/: 0.D9d642DQ.js  1.DAw6Na27.js  2.CEmPRnTN.js
site-svelte/.svelte-kit/output/server/: manifest-full.js  manifest.js
site-svelte/.svelte-kit/output/server/.vite/: manifest.json
site-svelte/.svelte-kit/output/server/_app/immutable/assets/: _page.D-eMn-zY.css
site-svelte/.svelte-kit/output/server/chunks/: index.js  internal.js  root.js
site-svelte/.svelte-kit/output/server/entries/pages/: _page.svelte.js
site-svelte/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
site-svelte/src/routes/: +layout.svelte
src/: abbreviations.rs  cli.rs  config.rs  diff.rs  files.rs  format.rs  gen_docs.rs  init.rs  lib.rs  lsp.rs  main.rs  mcp.rs  output.rs  reflow.rs  sdiff.rs  wasm.rs  watch.rs  wdiff.rs
src/parser/: latex.rs  markdown.rs  mod.rs  org.rs  pandoc.rs  plaintext.rs  rst.rs
src/sentence/: mod.rs  neural.rs  unicode.rs
tests/: integration.rs
tests/fixtures/: expected.md  expected.org  expected.tex  expected.txt  sample.md  sample.org  sample.tex  sample.txt
vale/snapper/: LongProseLine.yml  SemanticLineBreaks.yml
