[package]
name = "snapper-fmt"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Semantic line break formatter for Org, LaTeX, Markdown, and plaintext"
repository = "https://github.com/TurtleTech-ehf/snapper"
license = "MIT"
keywords = ["semantic", "linebreak", "formatter", "latex", "orgmode"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
homepage = "https://snapper.turtletech.us"

[[bin]]
name = "snapper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
unicode-segmentation = "1"
regex = "1"
textwrap = "0.16"
thiserror = "2"
anyhow = "1"
imara-diff = "0.2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ec4rs = "1"
toml = "0.8"
notify = "7"
glob = "0.3"
tempfile = "3"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }

nnsplit = { version = "0.5", features = ["tract-backend", "model-loader"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/snapper-fmt-{ target }.tar.xz"
bin-dir = "snapper-fmt-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "txz"
