[package]
name = "snapper-fmt"
version = "0.7.2"
edition = "2024"
rust-version = "1.85"
description = "Semantic line break formatter for Org, LaTeX, Markdown, and plaintext"
repository = "https://github.com/TurtleTech-ehf/snapper"
license = "MIT"
keywords = ["semantic", "linebreak", "formatter", "latex", "orgmode"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
homepage = "https://snapper.turtletech.us"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "snapper"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "snapper-gen-docs"
path = "src/gen_docs.rs"
required-features = ["cli"]

[features]
default = ["cli", "neural", "lsp", "watch", "pandoc"]
cli = ["dep:clap", "dep:clap-markdown", "dep:rayon", "dep:ec4rs", "dep:glob"]
neural = ["dep:nnsplit"]
lsp = ["dep:tower-lsp", "dep:tokio"]
watch = ["dep:notify"]
pandoc = ["dep:pandoc_ast"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]
mcp = ["dep:rmcp", "dep:schemars"]

[dependencies]
# Always-on (WASM-safe)
unicode-segmentation = "1"
regex = "1"
textwrap = "0.16"
thiserror = "2"
anyhow = "1"
imara-diff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI-only
clap = { version = "4", features = ["derive", "string"], optional = true }
clap-markdown = { version = "0.1", optional = true }
rayon = { version = "1", optional = true }
ec4rs = { version = "1", optional = true }
glob = { version = "0.3", optional = true }

# Feature-gated
nnsplit = { version = "0.5", features = ["tract-backend", "model-loader"], optional = true }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"], optional = true }
notify = { version = "7", optional = true }
pandoc_ast = { version = "0.8", optional = true }
tempfile = "3"

# WASM-only
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

# MCP server
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/snapper-fmt-{ target }.tar.xz"
bin-dir = "snapper-fmt-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "txz"
